--- a/MusicPlayer/MusicPlayer/template/music-template/index.html
+++ b/MusicPlayer/MusicPlayer/template/music-template/index.html
@@ -21,7 +21,7 @@
       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
       crossorigin="anonymous"
     />
-    <link href="../assets/css/main.css" rel="stylesheet" />
+    <link href="assets/css/main.css" rel="stylesheet" />
   </head>
 
   <body class="bg-gray-100 font-sans pb-24">
@@ -52,7 +52,7 @@
     <section class="mb-8 py-20 text-white text-center relative">
       <div
         class="absolute inset-0 w-full h-full bg-contain introduction-bg"
-        style="background-image: url(../assets/img/header.png)"
+        style="background-image: url(../../public/assets/img/header.png)"
       ></div>
       <div class="container mx-auto">
         <div class="text-white main-header-content">
@@ -68,7 +68,7 @@
 
       <img
         class="relative block mx-auto mt-5 -mb-20 w-auto max-w-full"
-        src="/MusicPlayer/MusicPlayer/assets/img/introduction-music.png"
+        src="/assets/img/introduction-music.png"
       />
     </section>
 
