--- a/MusicPlayer/MusicPlayer/template/music-template/song.html
+++ b/MusicPlayer/MusicPlayer/template/music-template/song.html
@@ -21,7 +21,7 @@
       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
       crossorigin="anonymous"
     />
-    <link href="../assets/css/main.css" rel="stylesheet" />
+    <link href="assets/css/main.css" rel="stylesheet" />
   </head>
 
   <body class="bg-gray-100 font-sans pb-24">
